fix: sharing dropdown links on mobile

--- a/theme/ItaliaTheme/Components/_sharing.scss
+++ b/theme/ItaliaTheme/Components/_sharing.scss
@@ -3,7 +3,7 @@
   .link-list-wrapper {
     ul {
       li {
-        a,
+        a.list-item,
         button.btn-link {
           display: flex;
           align-items: center;
